--- a/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
+++ b/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
@@ -52,10 +52,10 @@
 
     <div class="container">
         <form class="form-horizontal" role="form">
-            <div class="form-group" style="margin-bottom: 5%">
-                <label class="col-sm-2 control-label">Continent</label>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Choisir le continent</label>
                 <div class="col-sm-10">
-                    <input type="text" id="inputContinent">
+                    <select class="form-control" id="inputContinent"></select>
                 </div>
             </div>
 
